# project-fin-de-semestre

./: .env.example  .env.production  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  prisma.config.ts
.github/workflows/: backend-ci.yml  frontend-ci.yml  mobile-ci.yml  release.yml
build-cmake/: CMakeCache.txt
data/: queries.sql  schema.sql
docs/: SmartStudy_AI_rapport_viewer.html
frontend/: middleware.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  template.tsx
frontend/app/(auth)/callback/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/chat/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/documents/: page.tsx
frontend/app/flashcards/: page.tsx
frontend/app/mindmap/: page.tsx
frontend/app/mindmap/[id]/: page.tsx
frontend/app/quiz/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: avatar-studio.tsx  chat-interface.tsx  document-uploader.tsx  flashcard-review-card.tsx  floating-back-button.tsx  markdown-text.tsx  pomodoro-timer.tsx  sidebar.tsx  study-heatmap.tsx  xp-progress-bar.tsx
frontend/components/ui/: card.tsx
frontend/lib/: api.ts  avatar.ts  oauth.ts  progress.ts  supabase-google.ts  supabase-oauth.ts  supabase.ts  user-storage.ts
frontend/types/: index.ts
frontend/utils/supabase/: client.ts  config.ts  middleware.ts  server.ts
include/api/: ai_client.h  gemini.h  http_client.h  rest_client.h
include/auth/: jwt.h  oauth.h
include/chat/: chat_engine.h
include/core/: app.h  config.h  error.h
include/db/: database.h  db.h  db_factory.h  db_interface.h  models.h
include/document/: document_analyzer.h  document_parser.h
include/flashcard/: flashcard_srs.h
include/gamification/: gamification.h
include/mindmap/: mindmap.h
include/pdf/: pdf_parser.h
include/progress/: tracker.h
include/quiz/: quiz_engine.h
include/review/: flashcard.h  quiz.h  spaced_repetition.h
include/server/: http_server.h
include/utils/: json_helper.h  json_parser.h  logger.h  string_utils.h
mobile/: app.json  package.json  tsconfig.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  chat.tsx  home.tsx  library.tsx  profile.tsx  study.tsx
mobile/constants/: theme.ts
mobile/lib/: api.ts  notifications.ts  offline-db.ts  store.ts
prisma/: README.md  schema.prisma
scripts/: deploy.sh  generate_report_pdf.py
src/: main.c
src/api/: ai_client.c  gemini.c  http_client.c  rest_client.c
src/auth/: jwt.c  oauth.c
src/chat/: chat_engine.c
src/core/: app.c  config.c  error.c
src/db/: database.c  db.c  db_factory.c  db_sqlite.c  db_supabase.c
src/document/: document_analyzer.c  document_parser.c
src/flashcard/: flashcard_srs.c
src/gamification/: gamification.c
src/mindmap/: mindmap.c
src/pdf/: pdf_parser.c
src/progress/: tracker.c
src/quiz/: quiz_engine.c
src/review/: flashcard.c  quiz.c  spaced_repetition.c
src/server/: http_server.c
src/utils/: json_helper.c  json_parser.c  logger.c  string_utils.c
tests/: main_test.c  test_chat_engine.c  test_config.c  test_database.c  test_db.c  test_error.c  test_flashcard.c  test_flashcard_srs.c  test_gamification.c  test_json_helper.c  test_json_parser.c  test_main.c  test_mindmap.c  test_pdf_parser.c  test_quiz.c  test_rest_client.c  test_spaced_repetition.c  test_srs.c  test_string_utils.c  test_tracker.c
